Fixed spacing issues on the home page that resulted from previous changes to headings and lists.

--- a/styles/home.css
+++ b/styles/home.css
@@ -67,6 +67,7 @@ complimentary greens: 9FB553    7B8851    61761B    C6DA82    CCDA99
     float: none !important;
     width: auto !important;
     padding: 0 !important;
+    margin: 0;
 }
 
 #mega-drop-down div.download li:first-child {
@@ -250,6 +251,7 @@ div.featured-content div.bottom-right span.graphic {
 div.featured-content div.feature h2 {
     line-height: 1;
     padding-bottom: .5em;
+    margin: 0;
 }
 
 div.featured-content p {
@@ -271,6 +273,7 @@ div.home-sidebar h2 {
     line-height: 100%;
     padding: 5px 0 10px 0;
     font-weight: normal;
+    margin: 0;
 }
 
 div.home-sidebar h2:first-child {
@@ -279,5 +282,6 @@ div.home-sidebar h2:first-child {
 
 div.home-sidebar ul {
     margin: 0 0 30px 0;
+    list-style-type: none;
     padding: 0;
 }
